header section fixed

--- a/index.html
+++ b/index.html
@@ -54,18 +54,17 @@
          </div>
         </div>
         </section>
-        
-        <!-- Banner -->
-        <section class="flex mt-20 justify-center items-center">
 
-            <div class="w-1/2">
-                <h3 class="noto-serif font-bold text-[65px] text-[#000000]">ALWAYS <span class="text-[#E95A08]">FRESH <br> FLOWERS</span></h3>
-                <p class="inter-normal text-[22px] text-[#00000080] mt-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+        <!-- Banner -->
+        <section class=" lg:flex lg:flex-row mt-20 lg:justify-center lg:items-center lg:gap-0 gap-7 flex flex-col-reverse">
+
+            <div class=" lg:w-1/2 mx-4">
+                <h3 class="noto-serif font-bold lg:text-[65px] text-[24px] text-[#000000]">ALWAYS <span class="text-[#E95A08]">FRESH <br> FLOWERS</span></h3>
+                <p class="inter-normal lg:text-[22px] text-[14px] text-[#00000080] mt-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
             </div>
             <div>
                 <img src="assets/hero-flower.png" alt="">
             </div>
-
         </section>
 
 
