Flower & Plants Lover Section Added

--- a/index.html
+++ b/index.html
@@ -133,6 +133,36 @@
             </div>
          </section>
 
+         <!--  Plants Lover section-->
+
+         <section class="lg:flex lg:flex-row lg:mt-52 mt-10 lg:justify-between flex flex-col justify-center items-center mb-52 mx-4 lg:mx-0">
+
+            <div class="flex max-w-[540px]">
+                <img src="assets/flower-store.png" alt="">
+                <img class=" hidden lg:block w-[286px] h-[286px] ml-[-190px] mt-[-130px]" src="assets/trusted-badge.png" alt="">                
+                      
+            </div>
+
+            <div class="max-w-[540px]">
+                <h3 class="noto-serif text-black font-bold lg:text-[50px] text-[30px] mt-5">Flower & Plants <span class="hidden lg:inline"> <br> </span> Lover</h3>
+               
+
+                    <ul class="list-disc inter-normal  pl-5 text-[#00000080] lg:text-[22px] text-[14px] flex flex-col gap-5 mt-5">
+                        <li>
+                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+
+                        </li>
+                        <li>
+                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                        </li>
+                        <li>
+                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                        </li>
+                    </ul>
+                </div>
+
+         </section>
+
 
     </main>
 
