Latest Deals Section Added

--- a/index.html
+++ b/index.html
@@ -164,6 +164,44 @@
          </section>
 
 
+         <!-- Latest Deals Section -->
+
+  <section class="mb-28 mx-4 lg:mx-0">
+
+            <div class="flex flex-col justify-center items-center">
+                <h3 class="noto-serif font-bold  text-black text-[50px]"><span class="text-[#E95A08]">Latest</span>  Deals</h3>
+            <p class="inter-normal text-[22px] text-[#00000080] max-w-[888px] text-center">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+            </div>
+
+      <section class="noto-serif max-w-[1140px] mx-auto lg:mt-28 mt-12 grid lg:grid-cols-3 gap-7 ">
+ 
+      <div class="grid grid-cols-1 gap-6">
+      <div class="rounded-xl h-[200px] flex flex-col justify-center items-center text-white "
+         style="background-image: url(/assets/deal-bloom.png)">
+
+      <p class="text-xl font-bold">60% Off | Bloom Plant</p>
+      <button class="inter-normal mt-2  text-white px-4 py-2 text-sm font-semibold rounded underline">Shop Now</button>
+      </div>
+     
+      <div class="rounded-xl h-[200px]  flex flex-col justify-center items-center text-white "
+         style="background-image: url(/assets/deal-ana.png)">
+      <p class="text-xl font-bold">30% Off | Ana  Plant</p>
+      <button class="inter-normal mt-2  text-white px-4 py-2 text-sm font-semibold underline">Shop Now</button>
+      </div>
+    </div>
+
+    <div class="rounded-xl h-[200px] lg:h-full flex flex-col justify-center items-center text-white lg:col-span-2"
+       style="background-image: url(/assets/deal-zabo.png)">
+    <p class=" text-xl lg:text-[40px] font-bold text-center">25% Off | Zabo Plant</p>
+    <button class=" mt-4 text-white px-6  font-semibold underline lg:text-3xl text-xls">Shop Now</button>
+    </div>
+
+   </section>
+
+  </section>
+
+
     </main>
 
     <footer>
