Footer Section Added

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
    <!-- Colorful Bunch -->
 
   <section
-    class="mb-16 w-full bg-cover bg-center bg-no-repeat lg:mx-auto h-[275px] lg:h-[533px]"
+    class="mb-16 lg:mb-0 w-full bg-cover bg-center bg-no-repeat lg:mx-auto h-[275px] lg:h-[533px]"
     style="background-image: url(./assets/news-letter-bg.png)" >
 
     <div class="flex flex-col items-center justify-center h-full gap-6 px-4">
@@ -227,12 +227,48 @@
 
  </main>
 
-    <footer>
+ <!-- Footer Section -->
 
+    <footer class="w-full max-w-[1140px] mx-auto lg:mb-0 mb-80">
+
+       <section class="max-w-[1140px] lg:my-10 lg:flex lg:flex-row lg:gap-x-28 flex flex-col gap-4 mx-4 ">
+
+         <div class="mb-4 lg:mb-0">
+            <img src="./assets/logo.png" alt="">
+            <p class="mt-4 text-[#00000080] lg:w-[360px] text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+
+        </div>
+
+        <div class="flex flex-col gap-8 text-[#6B7280] text-[16px] whitespace-nowrap">
+            <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Blog</a>
+        <a href="">FAQ</a>
+        <a href="">Contact Us</a>
+
+        </div>
+
+        <div class="flex flex-col gap-8 text-[#6B7280] text-[16px] whitespace-nowrap">
+
+            <a href="">Features</a>
+            <a href="">Pricing</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Teams of Service</a>
+            <a href="">Help Center</a>
+
+        </div>
+
+        <div class="lg:w-[216px] flex flex-row gap-8">
+            <a href=""><img src="./assets/icon-linkedin.png" alt=""></a>
+            <a href=""><img src="./assets/icon-twitter.png" alt=""></a>
+            <a href=""><img src="./assets/icon-facebook.png" alt=""></a>
+            <a href=""><img src="./assets/icon-youtube.png" alt=""></a>
+            
+        </div>
+
+       </section>
 
     </footer>
 
-
-    
 </body>
 </html>
